--- a/CraftMagicItemsTests/CraftMagicItemsTests.csproj
+++ b/CraftMagicItemsTests/CraftMagicItemsTests.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\BattleLog\BattleLogFactoryTests.cs" />
     <Compile Include="UI\Sections\CheatSectionFactoryTests.cs" />
+    <Compile Include="UI\UserInterfaceEventHandlingLogicTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
