--- a/CraftMagicItems/CraftMagicItems.csproj
+++ b/CraftMagicItems/CraftMagicItems.csproj
@@ -77,6 +77,46 @@
     <Compile Include="Constants\UnarmedStrikeEnchantment.cs" />
     <Compile Include="Constants\VisualAdjustmentPatches.cs" />
     <Compile Include="Localization\LocalizationHelper.cs" />
+    <Compile Include="Patches\Harmony\ActionBarManagerUpdatePatch.cs" />
+    <Compile Include="Patches\Harmony\ActivatableAbilityOnEventDidTriggerRuleAttackWithWeaponResolvePatch.cs" />
+    <Compile Include="Patches\Harmony\AddInitiatorAttackRollTriggerCheckConditionsPatch.cs" />
+    <Compile Include="Patches\Harmony\AttackStatReplacementOnEventAboutToTriggerPatch.cs" />
+    <Compile Include="Patches\Harmony\BattleLogManagerInitializePatch.cs" />
+    <Compile Include="Patches\Harmony\BlueprintAbilityIsInSpellListPatch.cs" />
+    <Compile Include="Patches\Harmony\BlueprintItemEquipmentUsableCostPatch.cs" />
+    <Compile Include="Patches\Harmony\BrilliantEnergyOnEventAboutToTriggerPatch.cs" />
+    <Compile Include="Patches\Harmony\CapitalCompanionLogicOnFactActivatePatch.cs" />
+    <Compile Include="Patches\Harmony\DamageGraceOnEventAboutToTriggerPatch.cs" />
+    <Compile Include="Patches\Harmony\DescriptionTemplatesItemItemEnergyPatch.cs" />
+    <Compile Include="Patches\Harmony\DescriptionTemplatesItemItemEnergyResisitPatch.cs" />
+    <Compile Include="Patches\Harmony\DescriptionTemplatesItemItemEnhancementPatch.cs" />
+    <Compile Include="Patches\Harmony\GameOnAreaLoadedPatch.cs" />
+    <Compile Include="Patches\Harmony\ItemEntityVendorDescriptionPatch.cs" />
+    <Compile Include="Patches\Harmony\ItemEntityWeaponHoldInTwoHandsPatch.cs" />
+    <Compile Include="Patches\Harmony\LogItemDataUpdateSizePatch.cs" />
+    <Compile Include="Patches\Harmony\MainMenuStartPatch.cs" />
+    <Compile Include="Patches\Harmony\MissAgainstFactOwnerOnEventAboutToTriggerPatch.cs" />
+    <Compile Include="Patches\Harmony\PlayerPostLoadPatch.cs" />
+    <Compile Include="Patches\Harmony\RestControllerApplyRestPatch.cs" />
+    <Compile Include="Patches\Harmony\RuleCalculateAttacksCountOnTriggerPatch.cs" />
+    <Compile Include="Patches\Harmony\SpellbookPostLoadPatch.cs" />
+    <Compile Include="Patches\Harmony\UIUtilityIsMagicItem.cs" />
+    <Compile Include="Patches\Harmony\UIUtilityItemFillArmorEnchantmentsPatch.cs" />
+    <Compile Include="Patches\Harmony\UIUtilityItemFillEnchantmentDescriptionPatch.cs" />
+    <Compile Include="Patches\Harmony\UIUtilityItemGetQualitiesPatch.cs" />
+    <Compile Include="Patches\Harmony\UnitUseSpellsOnRestGetUnitWithMaxDamagePatch.cs" />
+    <Compile Include="Patches\Harmony\UnitViewHandSlotDataWeaponScalePatch.cs" />
+    <Compile Include="Patches\Harmony\Validation.cs" />
+    <Compile Include="Patches\Harmony\WeaponConditionalDamageDiceOnEventAboutToTriggerPatch.cs" />
+    <Compile Include="Patches\Harmony\WeaponConditionalEnhancementBonusOnEventAboutToTriggerRuleCalculateAttackBonusPatch.cs" />
+    <Compile Include="Patches\Harmony\WeaponConditionalEnhancementBonusOnEventAboutToTriggerRuleCalculateWeaponStatsPatch.cs" />
+    <Compile Include="Patches\Harmony\WeaponDamageAgainstAlignmentOnEventAboutToTriggerPatch.cs" />
+    <Compile Include="Patches\Harmony\WeaponEnergyBurstOnEventAboutToTriggerPatch.cs" />
+    <Compile Include="Patches\Harmony\WeaponEnergyDamageDiceOnEventAboutToTriggerPatch.cs" />
+    <Compile Include="Patches\Harmony\WeaponExtraAttackOnEventAboutToTriggerPatch.cs" />
+    <Compile Include="Patches\Harmony\WeaponParametersAttackBonusOnEventAboutToTriggerPatch.cs" />
+    <Compile Include="Patches\Harmony\WeaponParametersDamageBonusOnEventAboutToTriggerPatch.cs" />
+    <Compile Include="Patches\Harmony\WeaponRealityOnEventAboutToTriggerPatch.cs" />
     <Compile Include="Patches\IkPatch.cs" />
     <Compile Include="Patches\LeftHandVisualDisplayPatcher.cs" />
     <Compile Include="QuiverAbility.cs" />
