--- a/CraftMagicItems/CraftMagicItems.csproj
+++ b/CraftMagicItems/CraftMagicItems.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Constants\UnarmedStrikeEnchantment.cs" />
     <Compile Include="Constants\VisualAdjustmentPatches.cs" />
     <Compile Include="Localization\LocalizationHelper.cs" />
+    <Compile Include="Patches\HarmonyPatcher.cs" />
     <Compile Include="Patches\Harmony\ActionBarManagerUpdatePatch.cs" />
     <Compile Include="Patches\Harmony\ActivatableAbilityOnEventDidTriggerRuleAttackWithWeaponResolvePatch.cs" />
     <Compile Include="Patches\Harmony\AddInitiatorAttackRollTriggerCheckConditionsPatch.cs" />
