--- a/CraftMagicItems/CraftMagicItems.csproj
+++ b/CraftMagicItems/CraftMagicItems.csproj
@@ -146,9 +146,9 @@
     <Compile Include="Main.cs" />
     <Compile Include="PrerequisiteCasterLevel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SustenanceEnchantment.cs" />
+    <Compile Include="Enchantments\SustenanceEnchantment.cs" />
     <Compile Include="Patches\Harmony\WeaponSizeChange.cs" />
-    <Compile Include="WildEnchantment.cs" />
+    <Compile Include="Enchantments\WildEnchantment.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
